FoodSharePlatform By React

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,48 +1,54 @@
-.food-body{
-    width:80%;
-    margin:auto;
+.food-body {
+    width: 80%;
+    margin: auto;
 }
-#food-description{
+
+#food-description {
     text-align: center;
-    font-size:16px;
+    font-size: 16px;
 }
-#food-name{
-    width:160px;
+
+#food-name {
+    width: 160px;
     height: 20px;
     text-align: left;
     overflow: hidden;
 }
-#food-date{
-    width:100px;
-    height:20px;
-    text-align:right;
+
+#food-date {
+    width: 100px;
+    height: 20px;
+    text-align: right;
     overflow: hidden;
 }
-#food-img:hover{
+
+#food-img:hover {
     -webkit-transform: scale(1.04);
     -moz-transform: scale(1.05);
     -ms-transform: scale(1.05);
     -o-transform: scale(1.05);
     transform: scale(1.05);
-    -webkit-transition:350ms ease;
-    -moz-transition:350ms ease;
+    -webkit-transition: 350ms ease;
+    -moz-transition: 350ms ease;
     -ms-transition: 350ms ease;
     -o-transition: 350ms ease;
     transition: 350ms ease;
 }
-#food-img{
-    height:180px;
-    -webkit-transform: scale(1,1);
-    -moz-transform: scale(1,1);
-    -ms-transform: scale(1,1);
-    -o-transform: scale(1,1);
-    transform: scale(1,1);
+
+#food-img {
+    height: 180px;
+    -webkit-transform: scale(1, 1);
+    -moz-transform: scale(1, 1);
+    -ms-transform: scale(1, 1);
+    -o-transform: scale(1, 1);
+    transform: scale(1, 1);
     -webkit-transition: 150ms ease;
     -moz-transition: 150ms ease;
     -ms-transition: 150ms ease;
     -o-transition: 150ms ease;
     transition: 150ms ease;
 }
+
 /*slideshow */
 #picture-sliding {
     position: relative;
@@ -51,59 +57,70 @@
     margin: auto;
 }
 
-#btn_1{
+#btn_1 {
     font-size: 40px;
-    position:absolute;
-    opacity: 0.5;
-    z-index: 3;
-    top: 40%;
-    left:6.5%;
-}
-#btn_2{
-    font-size:40px;
     position: absolute;
     opacity: 0.5;
     z-index: 3;
     top: 40%;
-    right:7%;
+    left: 6.5%;
+}
+
+#btn_2 {
+    font-size: 40px;
+    position: absolute;
+    opacity: 0.5;
+    z-index: 3;
+    top: 40%;
+    right: 7%;
 }
 
 /*footer*/
-#footer{
-    margin-top:60px;
-    padding:1.5em 0em 1.5em 0em;
-    color:#aaaaaa;
-    background: #65767D;
-}
-#gotop{
-    display:none;
-    width:55px;
-    height:55px;
-    position:fixed;
-    right:10px;
-    bottom:0px;
+#footer {
+    /*height: 40px;
+
+    !*关键*!
+    position: relative;
+    margin-top:-40px;
+    color: #aaaaaa;*/
 }
 
+#gotop {
+    display: none;
+    width: 55px;
+    height: 55px;
+    position: fixed;
+    right: 10px;
+    bottom: 0px;
+}
 
 /*slogan*/
-#slogan h3:hover{
-    color:#00b3ee;
+#slogan h3:hover {
+    color: #00b3ee;
 }
 
-#slogan h3{
+#slogan h3 {
     font-weight: 700;
-    -webkit-animation:twinkling 5s infinite ease-in-out;
+    -webkit-animation: twinkling 5s infinite ease-in-out;
 }
 
-#slogan{
+#slogan {
     margin: 30px auto;
 }
 
 @-webkit-keyframes twinkling {
-    0%{
+    0% {
         opacity: 0.5;
     }
-    100%{
+    100% {
         opacity: 1;
     }
+}
+
+/*userMessageShowed*/
+.userMessage-ul li {
+    list-style-type: none;
+}
+
+.modify-userMessage {
 }
